[gd_scene load_steps=4 format=2]

[ext_resource path="res://Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Boy.gd" type="Script" id=2]
[ext_resource path="res://BoyCut.png" type="Texture" id=3]

[node name="Boy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="Position3D" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 1.1921e-07, 0, -1.1921e-07, 1, 0, 4.33879, -3.59603e-07 )
texture = ExtResource( 3 )

[node name="ActionArea" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.79137 )

[node name="CollisionShape" parent="ActionArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33504, 3.80448 )

[node name="RunTimer" type="Timer" parent="." index="6"]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="RunTimer" to="." method="_on_RunTimer_timeout"]
